// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`((1, 2) => 1) 1`] = `
Object {
  "expressions": Array [
    Object {
      "clauses": Array [
        Object {
          "body": Array [
            Object {
              "kind": "Number",
              "value": 1,
            },
          ],
          "pattern": Array [
            Object {
              "kind": "Number",
              "value": 1,
            },
            Object {
              "kind": "Number",
              "value": 2,
            },
          ],
        },
      ],
      "kind": "Function",
    },
  ],
  "kind": "Program",
}
`;

exports[`([true|tail] => 1) 1`] = `
Object {
  "expressions": Array [
    Object {
      "clauses": Array [
        Object {
          "body": Array [
            Object {
              "kind": "Number",
              "value": 1,
            },
          ],
          "pattern": Array [
            Object {
              "head": Object {
                "kind": "Boolean",
                "value": true,
              },
              "kind": "DestructuredArray",
              "tail": Object {
                "kind": "Identifier",
                "name": "tail",
              },
            },
          ],
        },
      ],
      "kind": "Function",
    },
  ],
  "kind": "Program",
}
`;

exports[`(test 1) 1`] = `
Object {
  "expressions": Array [
    Object {
      "args": Array [
        Object {
          "kind": "Number",
          "value": 1,
        },
      ],
      "fn": Object {
        "kind": "Identifier",
        "name": "test",
      },
      "kind": "Call",
    },
  ],
  "kind": "Program",
}
`;

exports[`(test 1, 2) 1`] = `
Object {
  "expressions": Array [
    Object {
      "args": Array [
        Object {
          "kind": "Number",
          "value": 1,
        },
        Object {
          "kind": "Number",
          "value": 2,
        },
      ],
      "fn": Object {
        "kind": "Identifier",
        "name": "test",
      },
      "kind": "Call",
    },
  ],
  "kind": "Program",
}
`;

exports[`(test) 1`] = `
Object {
  "expressions": Array [
    Object {
      "args": Array [],
      "fn": Object {
        "kind": "Identifier",
        "name": "test",
      },
      "kind": "Call",
    },
  ],
  "kind": "Program",
}
`;

exports[`(true => 1) 1`] = `
Object {
  "expressions": Array [
    Object {
      "clauses": Array [
        Object {
          "body": Array [
            Object {
              "kind": "Number",
              "value": 1,
            },
          ],
          "pattern": Array [
            Object {
              "kind": "Boolean",
              "value": true,
            },
          ],
        },
      ],
      "kind": "Function",
    },
  ],
  "kind": "Program",
}
`;

exports[`[] 1`] = `
Object {
  "expressions": Array [
    Object {
      "kind": "Array",
      "values": Array [],
    },
  ],
  "kind": "Program",
}
`;

exports[`[1,2,3] 1`] = `
Object {
  "expressions": Array [
    Object {
      "kind": "Array",
      "values": Array [
        Object {
          "kind": "Number",
          "value": 1,
        },
        Object {
          "kind": "Number",
          "value": 2,
        },
        Object {
          "kind": "Number",
          "value": 3,
        },
      ],
    },
  ],
  "kind": "Program",
}
`;

exports[`fibonacci.peach 1`] = `
Object {
  "expressions": Array [
    Object {
      "kind": "Def",
      "name": "fib",
      "value": Object {
        "clauses": Array [
          Object {
            "body": Array [
              Object {
                "kind": "Number",
                "value": 1,
              },
            ],
            "pattern": Array [
              Object {
                "kind": "Number",
                "value": 0,
              },
            ],
          },
          Object {
            "body": Array [
              Object {
                "kind": "Number",
                "value": 1,
              },
            ],
            "pattern": Array [
              Object {
                "kind": "Number",
                "value": 1,
              },
            ],
          },
          Object {
            "body": Array [
              Object {
                "args": Array [
                  Object {
                    "args": Array [
                      Object {
                        "args": Array [
                          Object {
                            "kind": "Identifier",
                            "name": "x",
                          },
                          Object {
                            "kind": "Number",
                            "value": 1,
                          },
                        ],
                        "fn": Object {
                          "kind": "Identifier",
                          "name": "-",
                        },
                        "kind": "Call",
                      },
                    ],
                    "fn": Object {
                      "kind": "Identifier",
                      "name": "fib",
                    },
                    "kind": "Call",
                  },
                  Object {
                    "args": Array [
                      Object {
                        "args": Array [
                          Object {
                            "kind": "Identifier",
                            "name": "x",
                          },
                          Object {
                            "kind": "Number",
                            "value": 2,
                          },
                        ],
                        "fn": Object {
                          "kind": "Identifier",
                          "name": "-",
                        },
                        "kind": "Call",
                      },
                    ],
                    "fn": Object {
                      "kind": "Identifier",
                      "name": "fib",
                    },
                    "kind": "Call",
                  },
                ],
                "fn": Object {
                  "kind": "Identifier",
                  "name": "+",
                },
                "kind": "Call",
              },
            ],
            "pattern": Array [
              Object {
                "kind": "Identifier",
                "name": "x",
              },
            ],
          },
        ],
        "kind": "Function",
      },
    },
    Object {
      "args": Array [
        Object {
          "kind": "Identifier",
          "name": "fib",
        },
        Object {
          "kind": "Array",
          "values": Array [
            Object {
              "kind": "Number",
              "value": 0,
            },
            Object {
              "kind": "Number",
              "value": 1,
            },
            Object {
              "kind": "Number",
              "value": 2,
            },
            Object {
              "kind": "Number",
              "value": 3,
            },
            Object {
              "kind": "Number",
              "value": 4,
            },
            Object {
              "kind": "Number",
              "value": 5,
            },
            Object {
              "kind": "Number",
              "value": 6,
            },
            Object {
              "kind": "Number",
              "value": 7,
            },
            Object {
              "kind": "Number",
              "value": 8,
            },
            Object {
              "kind": "Number",
              "value": 9,
            },
            Object {
              "kind": "Number",
              "value": 10,
            },
          ],
        },
      ],
      "fn": Object {
        "kind": "Identifier",
        "name": "map",
      },
      "kind": "Call",
    },
  ],
  "kind": "Program",
}
`;

exports[`get(t(\`a\`), 0) 1`] = `
Object {
  "expressions": Array [
    Object {
      "kind": "Member",
      "name": Object {
        "kind": "Number",
        "value": 0,
      },
      "source": Object {
        "kind": "Tuple",
        "values": Array [
          Object {
            "kind": "String",
            "value": "a",
          },
        ],
      },
    },
  ],
  "kind": "Program",
}
`;

exports[`str.peach 1`] = `
Object {
  "expressions": Array [
    Object {
      "kind": "Array",
      "values": Array [
        Object {
          "kind": "String",
          "value": "str.peach before escape\\\\\`and after!",
        },
        Object {
          "kind": "String",
          "value": "hey 🌟",
        },
        Object {
          "kind": "String",
          "value": "multi
      line
  string",
        },
        Object {
          "kind": "String",
          "value": "such\\\\\\\\\\\\\\\\\\\\\`escape",
        },
        Object {
          "kind": "String",
          "value": "with	tab",
        },
        Object {
          "kind": "String",
          "value": "new
line",
        },
        Object {
          "kind": "String",
          "value": "back\\\\slash",
        },
        Object {
          "kind": "String",
          "value": "back\\\\\\\\to\\\\back",
        },
      ],
    },
  ],
  "kind": "Program",
}
`;

exports[`t() 1`] = `
Object {
  "expressions": Array [
    Object {
      "kind": "Tuple",
      "values": Array [],
    },
  ],
  "kind": "Program",
}
`;

exports[`t(\`1\`, (2), (x) => 3) 1`] = `
Object {
  "expressions": Array [
    Object {
      "kind": "Tuple",
      "values": Array [
        Object {
          "kind": "String",
          "value": "1",
        },
        Object {
          "args": Array [],
          "fn": Object {
            "kind": "Number",
            "value": 2,
          },
          "kind": "Call",
        },
        Object {
          "clauses": Array [
            Object {
              "body": Array [
                Object {
                  "kind": "Number",
                  "value": 3,
                },
              ],
              "pattern": Array [
                Object {
                  "kind": "Identifier",
                  "name": "x",
                },
              ],
            },
          ],
          "kind": "Function",
        },
      ],
    },
  ],
  "kind": "Program",
}
`;

exports[`t(1, 2) 1`] = `
Object {
  "expressions": Array [
    Object {
      "kind": "Tuple",
      "values": Array [
        Object {
          "kind": "Number",
          "value": 1,
        },
        Object {
          "kind": "Number",
          "value": 2,
        },
      ],
    },
  ],
  "kind": "Program",
}
`;

exports[`tail-recursion.peach 1`] = `
Object {
  "expressions": Array [
    Object {
      "kind": "Def",
      "name": "factorial",
      "value": Object {
        "clauses": Array [
          Object {
            "body": Array [
              Object {
                "kind": "Identifier",
                "name": "n",
              },
            ],
            "pattern": Array [
              Object {
                "kind": "Identifier",
                "name": "n",
              },
              Object {
                "kind": "Number",
                "value": 1,
              },
            ],
          },
          Object {
            "body": Array [
              Object {
                "args": Array [
                  Object {
                    "args": Array [
                      Object {
                        "kind": "Identifier",
                        "name": "n",
                      },
                      Object {
                        "kind": "Identifier",
                        "name": "x",
                      },
                    ],
                    "fn": Object {
                      "kind": "Identifier",
                      "name": "*",
                    },
                    "kind": "Call",
                  },
                  Object {
                    "args": Array [
                      Object {
                        "kind": "Identifier",
                        "name": "x",
                      },
                      Object {
                        "kind": "Number",
                        "value": 1,
                      },
                    ],
                    "fn": Object {
                      "kind": "Identifier",
                      "name": "-",
                    },
                    "kind": "Call",
                  },
                ],
                "fn": Object {
                  "kind": "Identifier",
                  "name": "factorial",
                },
                "kind": "Call",
              },
            ],
            "pattern": Array [
              Object {
                "kind": "Identifier",
                "name": "n",
              },
              Object {
                "kind": "Identifier",
                "name": "x",
              },
            ],
          },
        ],
        "kind": "Function",
      },
    },
    Object {
      "kind": "Def",
      "name": "f",
      "value": Object {
        "clauses": Array [
          Object {
            "body": Array [
              Object {
                "args": Array [
                  Object {
                    "kind": "Number",
                    "value": 1,
                  },
                  Object {
                    "kind": "Identifier",
                    "name": "n",
                  },
                ],
                "fn": Object {
                  "kind": "Identifier",
                  "name": "factorial",
                },
                "kind": "Call",
              },
            ],
            "pattern": Array [
              Object {
                "kind": "Identifier",
                "name": "n",
              },
            ],
          },
        ],
        "kind": "Function",
      },
    },
    Object {
      "args": Array [
        Object {
          "kind": "Number",
          "value": 32768,
        },
      ],
      "fn": Object {
        "kind": "Identifier",
        "name": "f",
      },
      "kind": "Call",
    },
  ],
  "kind": "Program",
}
`;
